[gd_scene load_steps=6 format=3 uid="uid://c8dsenyov7l5d"]

[ext_resource type="Texture2D" uid="uid://curojrdmmapiv" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://shooter/shooter.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c8e5pvstjty2u" path="res://bullet/Bullet.tscn" id="3"]
[ext_resource type="Script" path="res://shooter/shooter_movement.gd" id="4"]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0

[node name="Shooter" type="Node2D"]
script = ExtResource("2")
projectile_scene = ExtResource("3")

[node name="ShooterKine" type="CharacterBody2D" parent="."]
script = ExtResource("4")

[node name="ShooterSprite" type="Sprite2D" parent="ShooterKine"]
texture = ExtResource("1")

[node name="ShooterCollision" type="CollisionShape2D" parent="ShooterKine"]
shape = SubResource("1")

[node name="ShootDirection" type="RayCast2D" parent="ShooterKine"]

[node name="SpawnOrigin" type="Marker2D" parent="ShooterKine"]

[node name="ProjectileSpawn" type="Sprite2D" parent="ShooterKine/SpawnOrigin"]
position = Vector2(50, 0)
scale = Vector2(0.155, 1)
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="ShooterKine"]

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
